; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/asf/extr_asfpacket.c_GetValue2b.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/asf/extr_asfpacket.c_GetValue2b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32, i32)* @GetValue2b to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetValue2b(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, 3
  switch i32 %13, label %60 [
    i32 1, label %14
    i32 2, label %29
    i32 3, label %44
    i32 0, label %59
  ]

14:                                               ; preds = %5
  %15 = load i32, i32* %10, align 4
  %16 = icmp slt i32 %15, 1
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 -1, i32* %6, align 4
  br label %61

18:                                               ; preds = %14
  %19 = load i32*, i32** %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %20, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %19, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %7, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32*, i32** %9, align 8
  %27 = load i32, i32* %26, align 4
  %28 = add i32 %27, 1
  store i32 %28, i32* %26, align 4
  store i32 0, i32* %6, align 4
  br label %61

29:                                               ; preds = %5
  %30 = load i32, i32* %10, align 4
  %31 = icmp slt i32 %30, 2
  br i1 %31, label %32, label %33

32:                                               ; preds = %29
  store i32 -1, i32* %6, align 4
  br label %61

33:                                               ; preds = %29
  %34 = load i32*, i32** %8, align 8
  %35 = load i32*, i32** %9, align 8
  %36 = load i32, i32* %35, align 4
  %37 = zext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %34, i64 %37
  %39 = call i32 @GetWLE(i32* %38)
  %40 = load i32*, i32** %7, align 8
  store i32 %39, i32* %40, align 4
  %41 = load i32*, i32** %9, align 8
  %42 = load i32, i32* %41, align 4
  %43 = add i32 %42, 2
  store i32 %43, i32* %41, align 4
  store i32 0, i32* %6, align 4
  br label %61

44:                                               ; preds = %5
  %45 = load i32, i32* %10, align 4
  %46 = icmp slt i32 %45, 4
  br i1 %46, label %47, label %48

47:                                               ; preds = %44
  store i32 -1, i32* %6, align 4
  br label %61

48:                                               ; preds = %44
  %49 = load i32*, i32** %8, align 8
  %50 = load i32*, i32** %9, align 8
  %51 = load i32, i32* %50, align 4
  %52 = zext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %49, i64 %52
  %54 = call i32 @GetDWLE(i32* %53)
  %55 = load i32*, i32** %7, align 8
  store i32 %54, i32* %55, align 4
  %56 = load i32*, i32** %9, align 8
  %57 = load i32, i32* %56, align 4
  %58 = add i32 %57, 4
  store i32 %58, i32* %56, align 4
  store i32 0, i32* %6, align 4
  br label %61

59:                                               ; preds = %5
  br label %60

60:                                               ; preds = %5, %59
  store i32 0, i32* %6, align 4
  br label %61

61:                                               ; preds = %60, %48, %47, %33, %32, %18, %17
  %62 = load i32, i32* %6, align 4
  ret i32 %62
}

declare dso_local i32 @GetWLE(i32*) #1

declare dso_local i32 @GetDWLE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
